Closed Bug 1096721 Opened 11 years ago Closed 11 years ago

nestegg-stdint.h doesn't need WIN32 ifdefs since bug 872127

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: kinetik, Assigned: kinetik)

Details

Attachments

(1 file)

Since bug 872127 we can use stdint.h directly. nestegg-stdint.h is expected to exist (it's generated by configure in the upstream version), but the Gecko copy can simply include stdint.h. (Note that this change was already made to libcubeb back when bug 872127 landed, so it's certainly safe here.)
Attachment #8520336 - Flags: review?(cajbir.bugzilla)
Attachment #8520336 - Flags: review?(cajbir.bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: