Bug 1096721 - Simplify nestegg-stdint.h.  r=cajbir